<resources>
    <string name="app_name">MyNotes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">search</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="add">Add</string>
    <string name="text">text</string>
    <string name="add_image">Add image</string>
    <string name="image_add">image_add</string>
    <string name="_09_03_2023_12_00">09.03.2023/12:00</string>
    <string name="delete">delete</string>
</resources>