<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e5e5e5"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AddFragment">

    <EditText
        android:padding="10dp"
        android:background="@drawable/bg_for_edit"
        android:id="@+id/desc_edit"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="32dp"
        android:hint="@string/description"
        android:importantForAutofill="no"
        android:inputType="text" />

    <EditText
        android:padding="10dp"
        android:background="@drawable/bg_for_edit"
        android:id="@+id/title_edit"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintBottom_toTopOf="@id/desc_edit"
        android:layout_marginHorizontal="32dp"
        android:hint="@string/title"
        android:layout_marginVertical="12dp"
        android:importantForAutofill="no"
        android:inputType="text" />

    <EditText
        android:padding="10dp"
        android:background="@drawable/bg_for_edit"
        android:id="@+id/date_edit"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@id/desc_edit"
        android:layout_marginHorizontal="32dp"
        android:hint="@string/date"
        android:layout_marginVertical="12dp"
        android:importantForAutofill="no"
        android:inputType="text"
        tools:ignore="TextFields" />

    <Button
        android:fontFamily="@font/inter_medium"
        android:background="@drawable/bg_for_button"
        android:id="@+id/btn_add"
        app:layout_constraintTop_toBottomOf="@id/date_edit"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="32dp"
        android:layout_marginVertical="12dp"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:textAllCaps="false"/>

    <ImageView
        android:id="@+id/image_global"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/bg_for_edit"
        android:contentDescription="@string/text"
        app:layout_constraintBottom_toTopOf="@id/title_edit"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="16dp" />

    <ImageView
        android:id="@+id/icon_for_image"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="12dp"
        android:background="@drawable/ic_image"
        android:contentDescription="@string/text"
        app:layout_constraintBottom_toTopOf="@id/title_edit"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="180dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:text="@string/add_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/icon_for_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

</androidx.constraintlayout.widget.ConstraintLayout>