<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_for_edit"
    android:layout_marginHorizontal="14dp"
    android:layout_marginVertical="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="12dp"
        android:src="@drawable/img_fox"
        android:text="@string/title"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription='@string/image_add' />
    <TextView
        android:id="@+id/title"
        android:textColor="@color/black"
        android:text="@string/title"
        android:fontFamily="@font/inter_medium"
        android:textSize="16sp"
        android:layout_margin="12dp"
        app:layout_constraintStart_toEndOf="@id/image"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="wrap_content"
        />
    <TextView
        android:text="@string/description"
        android:id="@+id/desc"
        android:layout_margin="12dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:fontFamily="@font/inter_light"
        app:layout_constraintStart_toEndOf="@id/image"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/date_text"
        android:text="@string/_09_03_2023_12_00"
        android:layout_margin="12dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:fontFamily="@font/inter_light"
        android:layout_width="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="12dp"
        app:layout_constraintTop_toBottomOf="@id/desc"
        android:layout_height="wrap_content"
        />
    <ImageView
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_delete"
        android:layout_marginEnd="22dp"
        app:layout_constraintTop_toTopOf="@id/title"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/delete" />
    <ImageView
        android:id="@+id/edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_edit_text"
        android:layout_marginEnd="22dp"
        app:layout_constraintTop_toTopOf="@id/title"
        app:layout_constraintEnd_toStartOf="@id/delete"
        android:contentDescription="@string/delete" />
    <ImageView
        android:id="@+id/for_intent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_intent"
        android:layout_marginEnd="22dp"
        app:layout_constraintTop_toTopOf="@id/title"
        app:layout_constraintEnd_toStartOf="@id/edit"
        android:contentDescription="@string/delete" />


</androidx.constraintlayout.widget.ConstraintLayout>